client/stylesheets/edgardStyle.less
/* ... */
#home-search {
  .form-control:focus {
    box-shadow: inset 0 1px 1px @dark-blue;
  }
}
input.input-blue {
  border: @light-blue solid 12px;
  -webkit-box-shadow: inset 0px 0px 0px 7px lighten(@light-blue, 30%);
  -moz-box-shadow: inset 0px 0px 0px 7px lighten(@light-blue, 30%);
  box-shadow: inset 0px 0px 0px 7px lighten(@light-blue, 10%);
  width: 100%;
  height: 80px;
  color: @dark-blue;
}

.form-group {

  label.control-label {
    color: @dark-gray;
    font-weight: normal;
    margin-bottom: 2px;
  }
}


.form-control::-webkit-input-placeholder {
  color: @dark-blue;
  opacity: 0.7;
}
.form-control:-moz-placeholder {
  color: @dark-blue;
  opacity: 0.7;
}
.form-control::-moz-placeholder {
  color: @dark-blue;
  opacity: 0.7;
}
.form-control:-ms-input-placeholder {
  color: @dark-blue;
  opacity: 0.7;
}

input[type="radio"], input[type="checkbox"] {
  margin-right: 5px;
}



.form-control-feedback {
  margin-right: 40px;
  margin-top: 20px;
  font-size: 22px;
  color: @dark-blue;
}


input.input-gray {
  border: @dark-gray solid 20px;
  background-color: @light-gray;
  width: 100%;
  height: 80px;
}
.input-beige {
  ul {
    background-color: @beige !important;
  }
}
input.input-beige, select.input-beige, textarea.input-beige {
  background-color: @beige;

  color: @dark-gray;

  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  ::-moz-focus-inner {
    border: 0;
    padding: 0;
  }

}
input.input-beige {
  height: 40px;
}


/* Sort */
div.sort {
  font-size: 18px;
}
.sort .caret {
  border-left: 8px solid transparent;
  border-right: 8px solid transparent;
  border-top: 8px solid @light-red;
}
ul.sort {
  left: inherit;
  border: 0;
  -webkit-box-shadow: none;
  box-shadow: none;
}
.sort li input {
  margin-right: 10px;
}
.sort li > a {
  background-color: @light-red;
  color: #fff;
  border-radius: 2px;
  margin-bottom: 1px;
  &:hover {
    color: #fff;
    background-color: @dark-red;
  }
}

/* Boxes */

.coursebox {
  position: relative;
  overflow: hidden;
  .margin-bottom;
  background-color: #fff;
  @media only screen and (min-width : @screen-sm-min) {
    > [class^="col-"], > [class*=" col-"] {
      min-height: 204px;
    }
  }
  p {
    margin: 0 0 2px 0;
    button {
      @media only screen and (min-width : @screen-sm-min) {
        margin-right: 20px;
      }
    }
  }
  a {
    color: @dark-gray;
  }
  .box-img {
    margin-bottom: 10px;
    width: 100%;
    height: 300px;
    @media only screen and (min-width : @screen-sm-min) {
      height: 145px;
    }
    overflow: hidden;
    .img-zoom {
      width: 100%;
      height: 100%;
      background-position: 50% 50%;
      background-size: cover;
      background-image: none;
      .Default-Transition;
      &:hover {
        -webkit-transform: scale(1.05);
        -moz-transform: scale(1.05);
        -ms-transform: scale(1.05);
        -o-transform: scale(1.05);
        transform: scale(1.05);
      }
    }
  }

  .rate-btns {
    padding-top: 10px;
    padding-left: 60px;
  }

  div.rate-star {
    margin-right: 20px;
    margin-top: 12px;
  }
  .box-content {
    .box-content-top {
      padding-left: 10px;
      margin-top: 80px;
      @media only screen and (min-width : @screen-sm-min) {
        margin-top:0;
        min-height: 145px;
        padding: 20px;
        padding-top: 10px;
      }
    }
    .box-content-bottom {
        padding: 19px;
    }
  }


}

.trainerbox {
  .margin-bottom;
  .box-img {
    width: 100%;
    height: 150px;
    overflow: hidden;
    .img-zoom {
      width: 100%;
      height: 100%;
      background-position: 50% 50%;
      background-size: cover;
      .Default-Transition;
      &:hover {
        -webkit-transform: scale(1.05);
        -moz-transform: scale(1.05);
        -ms-transform: scale(1.05);
        -o-transform: scale(1.05);
        transform: scale(1.05);
      }
    }
  }
  .box-title {
    height: 110px;
    overflow: hidden;
    padding: 20px 10px 0 10px;
    background-color: @dark-blue;
    border-bottom: 20px solid @dark-blue;
    a, h4, p {
      color: #fff;
    }
    h3 {
      margin-top: 0;
      margin-bottom: 0;
    }
  }
  .box-subtitle {
    background-color: @dark-gray;
    color: #fff;
    padding: 4px 10px;
    i {
      margin: 0 6px;
    }
  }
  .box-content {
    background-color: #fff;
    padding: 20px;
    height: 120px;
    border-bottom: 20px solid #fff;
    overflow: hidden;
    a {
      color: black;
    }
  }
  .box-footer {
    position: relative;
    overflow: hidden;
    
    background-color: #fff;
    width: 100%;

    .box-footer-right {
      float: right;
    }
    .box-footer-left, .box-footer-right {
      width: 40px;
    }
    .box-footer-center {
      position: absolute;
      width: 100%;
      text-align: center;
      padding-top: 10px;
    }
  }
}

.trainerbox-light {
  .circle-img {
    margin: 0 auto;
    border: 1px solid @light-gray;
    border-radius: 50%;
    overflow: hidden;
    width: 180px;
    height: 180px;
    .img-zoom {
      width: 100%;
      height: 100%;
      background-position: 50% 50%;
      background-size: cover;

    }
  }
  text-align: center;
  .box-footer-center {
    margin-top: 20px;
  }
  a {
    color: @dark-gray;
  }
}
/* ... */

